<package format="2">
  <name>multimap_navigation</name>
  <version>0.0.1</version>
  <description>A package for facilitating multimap navigation</description>

  <maintainer email="athul@anscer.com">Athul Rajeev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>sqlite3</build_depend>
</package>
